syntax = "proto3";

package notes.v1;

option go_package = "gen/notes;notes";

service NoteService {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc ListNotes (ListNotesRequest) returns (ListNotesResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse);
}

message CreateNoteRequest {
  string title = 1;
  string content = 2;
  string path = 3;
}

message CreateNoteResponse {
  Note note = 1;
}

message ListNotesRequest {
  string path = 1;
}

message Note {
  string file_path = 1;
  string title = 2;
  string content = 3;
  int64 updated_at = 4;
}

message ListNotesResponse {
  repeated Note notes = 1;
  repeated string entries = 2;
}

message GetNoteRequest {
  string file_path = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message UpdateNoteRequest {
  string file_path = 1;
  string content = 2;
}

message UpdateNoteResponse {
  Note note = 1;
}

message DeleteNoteRequest {
  string file_path = 1;
}

message DeleteNoteResponse {}
